# expander-fp

./: .gitignore
expander-bottle/: expander-bottle.cabal
expander-bottle/src/: Bottle.hs  Main.hs
expander-mutex/: expander-mutex.cabal
expander-mutex/src/: Main.hs  Mutex.hs
expander-philosophers/: expander-philosophers.cabal
expander-philosophers/src/: Main.hs  Philosophers.hs
expander-system/: .gitignore  expander-system.cabal
expander-system/app/: expander-system.hs
expander-system/src/: Bottle.hs  Main.hs  Mutex.hs  Philosophers.hs  TransitionSystem.hs
