name:                 expander-philosophers
version:              0.1.0.0
synopsis:             
homepage:
author:               Marian Kleineberg
maintainer:           
category:             
build-type:           Simple
cabal-version:        >=1.10

executable expander-philosophers
  main-is:              Main.hs
  build-depends:        base >= 4.7 && < 5
                      , containers
                      , mtl
                      , list-t
  hs-source-dirs:       src
  default-language:     Haskell2010
