name:                 expander-system
version:              0.1.0.0
synopsis:             
homepage:
author:               Marco Pennekamp
maintainer:           marco.pennekamp96@gmail.com
category:             
build-type:           Simple
cabal-version:        >=1.10

executable expander-system
  main-is:              Main.hs
  build-depends:        base >= 4.7 && < 5
                      , containers
                      , mtl
                      , list-t
  hs-source-dirs:       src
  default-language:     Haskell2010
